Fixed z-index bug and lowered y coordinates

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 .popup {
   position: fixed;
   left: 40%;
-  top: 5%;
+  top: 15%;
   width: 20%;
   background-color: #C7C7F1;
   padding: 20px;
   border-radius: 42px;
   border: 3px solid black;
   font-size: 16px;
+  z-index: 9999999;
 }
